...
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="12dp"
            android:text="@string/welcome_message" />

        <ImageView
            android:id="@+id/news_image"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/daily_news"
            android:adjustViewBounds="true"
            android:layout_width="200dp"
            android:layout_height="200dp" />

...
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:text="@string/instructions" />

        <EditText
            android:id="@+id/search_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:hint="@string/search_hint"
            android:backgroundTint="#FFFFFF"
...
